*5714* citation editor: ie7: ie7 does not correctly handle border 0 when border is not collapsed as well.

--- a/styles/themes/default/theme.css
+++ b/styles/themes/default/theme.css
@@ -77,6 +77,7 @@ div.grid div.wrapper {
 div.grid table {
 	background-color: #fff;
 	border: 1px solid #b6c9d5;
+	border-collapse: collapse; /* Required for IE7 to remove table borders. */
 }
 
 div.grid tr.alternate_row, div.grid tr.alternate_row .row_file {
